objects/agf__ADM_Release__c.object
<CustomObject>
    <fields>
        <fullName>agf__Actual_Release_Date__c</fullName>
        <label>Actual Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>agf__ADM_Application__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Created_By_import__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User imported from bugforce that created the original release.</description>
        <label>Created By (import)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Created_On_import__c</fullName>
        <description>Data/time imported from the original release from bugforce.</description>
        <label>Created On (import)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Customer_Facing_Release_Name__c</fullName>
        <description>The name communicated to customers when referencing this release.</description>
        <inlineHelpText>(Optional) Enter the name communicated to customers for this release. This name may appear in the customer-facing 12-month TRUST calendar.</inlineHelpText>
        <label>Customer Facing Release Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Deployment_Delayed_minutes__c</fullName>
        <formula>IF(ISNULL(agf__Release_Date__c),( (agf__Actual_Release_Date__c  -  agf__Planned_GUS_Release_Date__c )* 24 * 60), (agf__Actual_Release_Date__c - agf__Release_Date__c) * 24 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Delayed (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Deployment_Instances__c</fullName>
        <description>Instances to receive this release.</description>
        <inlineHelpText>Enter the instances to receive this release as a space separated list (1 space between each instance). For example: NA1 NA2 CS2</inlineHelpText>
        <label>Deployment Instances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Duplicate_Validator__c</fullName>
        <label>Duplicate Validator</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Note__c</fullName>
        <description>This field has been mapped from the BUG.RELEASES.NOTE column which is a CLOB</description>
        <inlineHelpText>Use this field to put in detailed information regarding the release</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs__c</fullName>
        <inlineHelpText># of Work records that were released during the deployment of this release.</inlineHelpText>
        <label>Number of Work Records</label>
        <summaryForeignKey>agf__ADM_Released_In__c.agf__Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Stamps__c</fullName>
        <label>Number of Stamps</label>
        <summaryForeignKey>agf__ADM_Released_In__c.agf__Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Planned_Duration__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Planned duration of deployment in minutes.</description>
        <inlineHelpText>Planned duration of deployment in minutes. If &quot;Scheduled End Date&quot; is specified, this value will be calculated on Save.</inlineHelpText>
        <label>Planned Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Planned_GS0_Duration__c</fullName>
        <description>Planned duration of GS0 deployment in minutes.</description>
        <inlineHelpText>Planned duration of GS0 deployment in minutes. If &quot;Planned GS0 End Date&quot; is specified, this value will be calculated on Save.</inlineHelpText>
        <label>Planned Release Duration To Pilot Org</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Planned_GS0_End_Date__c</fullName>
        <inlineHelpText>Enter the date/time for the expected completion of the GS0 deployment. If specified, the &quot;Planned GS0 Duration&quot; field will be calculated on Save.</inlineHelpText>
        <label>Scheduled Release End Date To Pilot Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Planned_GUS_Release_Date__c</fullName>
        <description>Date and time that this release is deployed to GS0.</description>
        <inlineHelpText>Please specify if this release is deployed to GS0 separately.</inlineHelpText>
        <label>Scheduled Release Date To Pilot Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Planned_Unplanned__c</fullName>
        <label>Planned / Unplanned</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Release_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                    <default>true</default>
                    <label>Unplanned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Release_Date__c</fullName>
        <label>Scheduled Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Release_Delay_Category__c</fullName>
        <formula>IF(agf__Deployment_Delayed_minutes__c  &lt;= 30, &quot;On-time Release&quot;, 
IF(agf__Deployment_Delayed_minutes__c  &lt;= 120, &quot;Delay of Less than 2 Hours&quot;, 
IF(agf__Deployment_Delayed_minutes__c &gt; 120, &quot;Delay of More than 2 Hours&quot;, &quot;&quot;)))</formula>
        <label>Release Delay Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scheduled_End_Date__c</fullName>
        <inlineHelpText>Enter the date/time for the expected completion of the deployment. If specified, the &quot;Planned Duration&quot; field will be calculated on Save.</inlineHelpText>
        <label>Scheduled End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Short_Note__c</fullName>
        <description>This is a column mapping from BUG.RELEASE table column SHORT_NOTE</description>
        <inlineHelpText>Use this field to provide a short description of the release.</inlineHelpText>
        <label>Short Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed - Other Issues</fullName>
                </value>
                <value>
                    <fullName>Deployed Successfully</fullName>
                </value>
                <value>
                    <fullName>Deployment in Progress</fullName>
                </value>
                <value>
                    <fullName>Deployment Introduced Regression</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                    <default>true</default>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>Partial Deployment - Halted</fullName>
                </value>
                <value>
                    <fullName>Partial Deployment - Superseded</fullName>
                </value>
                <value>
                    <fullName>Partial Rollback</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Redeployed After Rollback</fullName>
                </value>
                <value>
                    <fullName>Rollback</fullName>
                </value>
                <value>
                    <fullName>Deployed - Exceeded Release Window</fullName>
                </value>
                <value>
                    <fullName>Deployed - Date Changed</fullName>
                </value>
                <value>
                    <fullName>Canceled or Never Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Number_of_Bugs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__Today</fullName>
        <columns>NAME</columns>
        <columns>agf__Number_of_Bugs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Actual_Deploy_Date_Required_if_Deployed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL( agf__Actual_Release_Date__c  ), OR(ISPICKVAL( agf__Status__c, &apos;Deployed - Other Issues&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed Successfully&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployment Introduced Regression&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Deployment - Halted&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Deployment - Superseded&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Redeployed After Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed - Exceeded Release Window&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed - Date Changed&apos;) ))</errorConditionFormula>
        <errorDisplayField>agf__Actual_Release_Date__c</errorDisplayField>
        <errorMessage>Actual Release Date is required if the release has been fully or partially deployed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Application_set_after_In_Development</fullName>
        <active>true</active>
        <description>The Application field must be set when the Status is not NULL or &quot;In Development&quot;.</description>
        <errorConditionFormula>ISBLANK( agf__Application__c ) &amp;&amp; NOT(ISPICKVAL(agf__Status__c, &quot;&quot;)) &amp;&amp; NOT(ISPICKVAL(agf__Status__c, &quot;In Development&quot;))</errorConditionFormula>
        <errorDisplayField>agf__Status__c</errorDisplayField>
        <errorMessage>The Application must be set when the Release Status is not In Development</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Comma_Separated_Instances</fullName>
        <active>false</active>
        <description>Format is: blank, NA1 (one or two digits)  NA1,NA2 or NA1,NA2,...,NA99</description>
        <errorConditionFormula>NOT(REGEX( agf__Deployment_Instances__c , &quot;|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?$|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?((?:,(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?)+)*,(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?&quot;))</errorConditionFormula>
        <errorDisplayField>agf__Deployment_Instances__c</errorDisplayField>
        <errorMessage>Instance list must be of the form: NA1,NA2,CS2,...
Use capital letters and no whitespace.
Allowed prefixes are NA, CS, EU, AP, GS or SR only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__End_needed_when_Sched_date_specified</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( ISNULL( agf__Release_Date__c))</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_End_Date__c</errorDisplayField>
        <errorMessage>Scheduled End Date must be set when Scheduled Date is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__GS0_Duration_Must_be_14_days_or_less</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNULL( agf__Planned_GS0_End_Date__c ), false, (DATEVALUE(agf__Planned_GS0_End_Date__c) - DATEVALUE( agf__Planned_GUS_Release_Date__c )) &gt; 14)</errorConditionFormula>
        <errorDisplayField>agf__Planned_GS0_End_Date__c</errorDisplayField>
        <errorMessage>GS0 End date cannot be more than 14 days later than GS0 Release Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Release_Duration_Must_be_14_days_or_less</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNULL(agf__Scheduled_End_Date__c), false, (DATEVALUE(agf__Scheduled_End_Date__c)   -  DATEVALUE(agf__Release_Date__c)) &gt; 14)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_End_Date__c</errorDisplayField>
        <errorMessage>End date cannot be more than 14 days later than Release Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Release_Manager_required_if_deployed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( agf__Release_Manager__c ), OR(ISPICKVAL( agf__Status__c, &apos;Deployed - Other Issues&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed Successfully&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployment Introduced Regression&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Deployment - Halted&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Deployment - Superseded&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Partial Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Redeployed After Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Rollback&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed - Exceeded Release Window&apos;) ,
ISPICKVAL( agf__Status__c, &apos;Deployed - Date Changed&apos;) ))</errorConditionFormula>
        <errorDisplayField>agf__Release_Manager__c</errorDisplayField>
        <errorMessage>Release Manager must be specified if the release has been fully or partially deployed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Scheduled_Date_Required_if_no_GS0_Date</fullName>
        <active>true</active>
        <description>Scheduled date is a required field unless a GS0 date has been specified.</description>
        <errorConditionFormula>CONTAINS($Profile.Name,&quot;GUS Release&quot;) &amp;&amp; 
ISNULL( agf__Release_Date__c) &amp;&amp; 
ISNULL( agf__Planned_GUS_Release_Date__c ) &amp;&amp;   
NOT( ISCHANGED( agf__Number_of_Stamps__c ))</errorConditionFormula>
        <errorDisplayField>agf__Release_Date__c</errorDisplayField>
        <errorMessage>Scheduled Release Date must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Space_Separated_Instances</fullName>
        <active>true</active>
        <description>Format is: blank, NA1 (one or two digits)  NA1 NA2 or NA1 NA2 ... NA99</description>
        <errorConditionFormula>NOT(REGEX( agf__Deployment_Instances__c , &quot;|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?$|^(?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?((?: (?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?)+)* (?:NA|CS|AP|EU|GS|SR)[0-9][0-9]?&quot;))</errorConditionFormula>
        <errorDisplayField>agf__Deployment_Instances__c</errorDisplayField>
        <errorMessage>Instance list must be of the form: NA1 NA2 CS2 ...
Use capital letters and only a space between instances.
Allowed prefixes are NA, CS, EU, AP, GS or SR only.</errorMessage>
    </validationRules>
</CustomObject>